--- a/src/TripServer/wwwroot/app/login-button.component.html
+++ b/src/TripServer/wwwroot/app/login-button.component.html
@@ -1,36 +1,4 @@
-<div *ngIf="!!user.displayName" >Hi {{user.displayName}}</div>
-<button *ngIf="!user.displayName" type="button" class="btn btn-default navbar-btn" (click)="modal.open()">Login</button>
+<div *ngIf="!!user.displayName">Hi {{user.displayName}}</div>
+<button *ngIf="!user.displayName" type="button" class="btn btn-default navbar-btn" (click)="openModal()">Login</button>
 
-<modal #loginModal>
-    <modal-header [show-close]="true">
-        <h4 class="modal-title">Login/Register</h4>
-    </modal-header>
-    <modal-body>
-        <h1>Login</h1>
-        <form role="form" [ngFormModel]="loginFormModel" (ngSubmit)="onSubmit()" #loginForm="ngForm">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input autofocus type="text" ngControl="username" #username="ngForm" class="form-control" id="username" placeholder="Username">
-                <div [hidden]="username.valid || username.pristine" class="alert alert-danger">
-                    Username is required
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" #password="ngForm" ngControl="password" class="form-control" id="password" placeholder="Password">
-                <div [hidden]="password.valid || password.pristine" class="alert alert-danger">
-                    Password is required
-                </div>
-            </div>
-
-        </form>
-
-    </modal-body>
-    <modal-footer>
-        <button type="button" class="btn btn-primary pull-left" (click)="register()">Register</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal" (click)="close()">Cancel</button>
-        <button type="submit" class="btn btn-primary" (click)="loginForm.ngSubmit.emit()">Login</button>
-    </modal-footer>
-
-</modal>
+<login-modal (open)="modalOpen = true" (close)="modalOpen = false" *ngIf="modalOpen"></login-modal>
