--- a/src/TripServer/wwwroot/app/banner.component.css
+++ b/src/TripServer/wwwroot/app/banner.component.css
@@ -1,14 +1,29 @@
 nav.navbar{
 
-
+ min-height: 100px;
    -webkit-transition: all 0.4s ease;
    transition: all 0.4s ease;
    
-   background-image: url("https://acarroll2myking.files.wordpress.com/2014/07/sunshine_145918109.jpg");
+   background-image: url("/app/images/banner.jpg");
    background-repeat: no-repeat;
    background-position: center top;
 }
 
 nav.navbar.shrink {
-  min-height: 35px;
+  min-height: 50px;
+}
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
 }
