--- a/src/TripServer/wwwroot/app/location-thumbnail.component.html
+++ b/src/TripServer/wwwroot/app/location-thumbnail.component.html
@@ -7,7 +7,7 @@
         <h3>{{location.name}}</h3>
         <p><label>Rooms:</label> <span class="pull-right">{{location.nights}}</span></p>
         <p><label>Price:</label> <span class="pull-right">{{location.price | currency:'GBP':true}}</span></p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+        <p><edit-location-button [location]="location"></edit-location-button></p>
       </div>
     </div>
   </div>
