--- a/src/TripServer/wwwroot/app/locations.component.html
+++ b/src/TripServer/wwwroot/app/locations.component.html
@@ -1,7 +1,12 @@
+<h1>
+    Locations
+    <small>
+<add-location-button></add-location-button></small>
 
-        <div class="row">
-        
-        <div  *ngFor="let location of locations | async">
-            <location-thumbnail [location]="location"></location-thumbnail>
-        </div>
-        </div>
+    </h1> 
+<div class="row">
+
+    <div *ngFor="let location of locations | async">
+        <location-thumbnail [location]="location"></location-thumbnail>
+    </div>
+</div>
