--- a/src/TripServer/wwwroot/app/app.component.html
+++ b/src/TripServer/wwwroot/app/app.component.html
@@ -2,7 +2,7 @@
 <banner-shrink></banner-shrink>
 <div class="container body-content">
     <div class="page-header">
-  <h1>{{title}}<small>Subtext for header</small></h1>
+  <h1>{{title}}</h1>
 </div>
     <div class="col-lg-12"> </div>
     <locations></locations>
